# adk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  GAPS.md  PORTING.md  README.md
crates/adk-cli/: Cargo.toml
crates/adk-cli/src/: main.rs
crates/adk-mcp/: Cargo.toml  README.md
crates/adk-mcp/src/: main.rs  progress.rs  registry.rs  server.rs  tools.rs
crates/adk-server/: Cargo.toml
crates/adk-server/src/: dev_ui.rs  main.rs
crates/adk-server/src/dev_ui/: agent.rs  approvals.rs  artifacts.rs  config.rs  evals.rs  events.rs  graph.rs  n8n.rs  openai.rs  routes.rs  state.rs  tests.rs  tools.rs  traces.rs  types.rs
crates/adk-server/src/dev_ui/n8n/: credentials.rs  expr.rs  icons.rs  nodes.rs  push.rs  run.rs  workflows.rs
crates/adk-server/static/dev-ui/: prism-dark.css  prism-light.css
crates/adk-web/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
crates/adk-web/src/: api.rs  data.rs  main.rs
crates/adk-web/src/views/: chat.rs  components.rs  mod.rs  side_panel.rs  top_bar.rs
crates/adk-web/styles/: input.css
docs/: agents.md  n8n-ui.md
examples/: handoff_agents.rs  loop_workflow.rs  parallel_workflow.rs  react_agent.rs  sequential_workflow.rs  simple_agent.rs  tool_agent.rs  trail_advisor.rs
examples/agents/: kalamazoo_guide.yaml  kalamazoo_picker.yaml  weather_guide.yaml
scripts/: prepare-n8n-ui.mjs
src/: a2a.rs  agent.rs  anthropic.rs  app.rs  approval.rs  artifact.rs  auth.rs  cli.rs  cloud.rs  code_executor.rs  environment.rs  eval.rs  event.rs  fallback_model.rs  file_store.rs  gemini.rs  guardrail.rs  http_tool.rs  ids.rs  integration.rs  invocation.rs  lib.rs  live.rs  live_media.rs  memory.rs  metric.rs  model.rs  openai_compatible.rs  optimization.rs  planner.rs  platform.rs  plugin.rs  prompt.rs  replay.rs  run_config.rs  run_trace.rs  runner.rs  server.rs  session.rs  skills.rs  (+11 more)
src/runner/: context.rs  cycle.rs  plugins.rs  resume.rs  stream.rs  types.rs
tests/: approval.rs  builtin_guardrails.rs  credentials.rs  gaps.rs  model.rs  n8n_guardrails.rs  n8n_http.rs  output.rs  remaining.rs  replay.rs  runner.rs  runner_services.rs  runtime.rs  services.rs  subsystems.rs
