[package]
name = "adk-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/adk-cli", "crates/adk-server"]
resolver = "2"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
