[package]
name = "adk-server"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rs = { path = "../.." }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
