[package]
name = "adk-server"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rs = { path = "../.." }
axum = "0.8"
boa_engine = "0.20"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
