[package]
name = "adk-web"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rs = { path = "../.." }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }
yew = { version = "0.21", features = ["csr"] }
